@@ -42,4 +42,6 @@ CACHEOPS = {
 # We need to catch any changes in django
 CACHEOPS_STRICT_STRINGIFY = True
 
+ALLOWED_HOSTS = ['testserver']
+
 SECRET_KEY = 'abc'
