@@ -6,6 +6,7 @@
 - support caching django.contrib.gis queries (koodjo)
 - cacheops is now thread-safe
 - added a way to no-op cacheops
+- added @cached_view() and @cached_view_as()
 - fixed working with querysets created by non-patched constructor (#3 and dups)
 - fixed invalidate_model() for proxy models
 - fixed deepcopy(queryset) bug
